--- a/src/app/components/items/items.component.css
+++ b/src/app/components/items/items.component.css
@@ -1,8 +1,9 @@
-.clip {
-  max-width: 100%;
 
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+.card-thumbnail {
+  max-height: 330px;
+  overflow: hidden;
 }
 
+.bottom-margin{
+  margin-bottom: 10px;
+}
