--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -6,15 +6,6 @@
       </div>
       <div class="col-md-2">
 
-        <div class="d-inline-block" ngbDropdown #myDrop="ngbDropdown">
-          <button class="btn btn-outline-primary mr-2" id="dropdownManual" ngbDropdownAnchor (focus)="myDrop.open()">Toggle dropdown</button>
-          <div ngbDropdownMenu aria-labelledby="dropdownManual">
-            <button ngbDropdownItem>Action - 1</button>
-            <button ngbDropdownItem>Another Action</button>
-            <button ngbDropdownItem>Something else is here</button>
-          </div>
-        </div>
-
       </div>
     </div>
   </div>
@@ -46,4 +37,25 @@
       </ng-container>
     </div>
   </div>
+  <ng-container *ngIf="animeList && animeList.data && animeList.pagination">
+  <div class="container">
+    <div class="justify-content-center">
+      <nav aria-label="Page navigation example">
+        <ul class="pagination">
+          <li class="page-item">
+            <button class="page-link" href="#" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+            </button>
+          </li>
+          <li class="page-item">
+            <button class="page-link" (click)="getAnimeListByName()" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+            </button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  </ng-container>
 </div>
+
